# kwant

./: .gitignore  CMakeLists.txt  README.md  README.rst  dockerfile
logger/: CMakeLists.txt  class_loader.cxx  class_loader.h  location_info.cxx  location_info.h  log4cxx.properties  logger.h  logger_factory.cxx  logger_factory.h  logger_factory_log4cxx.cxx  logger_factory_log4cxx.h  logger_factory_mini_logger.cxx  logger_factory_mini_logger.h  logger_manager.cxx  logger_manager.h  test_logger.cxx  vidtk_logger.cxx  vidtk_logger.h  vidtk_logger_log4cxx.cxx  vidtk_logger_log4cxx.h  vidtk_logger_mini_logger.cxx  vidtk_logger_mini_logger.h  vidtk_mini_logger_formatter.cxx  vidtk_mini_logger_formatter.h  vidtk_mini_logger_formatter_basic.cxx  vidtk_mini_logger_formatter_basic.h  vidtk_mini_logger_formatter_int.h  vidtk_mini_logger_formatter_json.cxx  vidtk_mini_logger_formatter_json.h
scoring_framework/: .#track_synthesizer.h  CMakeLists.txt  README.markdown  activity_phase1_parameters.h  event_phase1_parameters.h  matching_args_type.cxx  matching_args_type.h  phase1_parameters.cxx  phase1_parameters.h  quickfilter_box.cxx  quickfilter_box.h  score_core.h  score_events.cxx  score_frames_aipr.cxx  score_frames_aipr.h  score_phase1.cxx  score_phase1.h  score_phase1_perseas.cxx  score_phase1_perseas.h  score_phase1_perseas.txx  score_phase2_aipr.cxx  score_phase2_aipr.h  score_phase2_hadwav.cxx  score_phase2_hadwav.h  score_phase3_aipr.cxx  score_phase3_aipr.h  score_phase3_events_perseas.cxx  score_phase3_events_perseas.h  score_phase3_hadwav.cxx  score_phase3_hadwav.h  score_tracks.cxx  score_tracks_aipr.h  score_tracks_hadwav.h  score_tracks_loader.cxx  score_tracks_loader.h  test_phase1.cxx  time_window_filter.cxx  time_window_filter.h  timestamp_utilities.cxx  timestamp_utilities.h  (+4 more)
stanag_4676/: Acceleration.cxx  Acceleration.h  Area.cxx  Area.h  CMakeLists.txt  CircularArea.cxx  CircularArea.h  CovarianceMatrix.cxx  CovarianceMatrix.h  CovarianceMatrixPosition.cxx  CovarianceMatrixPosition.h  CovarianceMatrixPositionVelocity.cxx  CovarianceMatrixPositionVelocity.h  DataSource.cxx  DataSource.h  Enums.cxx  Enums.h  Exceptions.cxx  Exceptions.h  GeodeticPosition.cxx  GeodeticPosition.h  IDdata.cxx  IDdata.h  LocalCartesianAcceleration.cxx  LocalCartesianAcceleration.h  LocalCartesianPosition.cxx  LocalCartesianPosition.h  LocalCartesianVelocity.cxx  LocalCartesianVelocity.h  LocalCoordinateSystem.cxx  LocalCoordinateSystem.h  Macros.h  PixelPosition.cxx  PixelPosition.h  PolygonArea.cxx  PolygonArea.h  Position.cxx  Position.h  SPADE_STANAG_4676.xsd  Security.cxx  (+21 more)
track_oracle/: CMakeLists.txt  csv_tokenizer.cxx  csv_tokenizer.h  element_descriptor.cxx  element_descriptor.h  element_store.h  element_store.txx  element_store_base.cxx  element_store_base.h  element_store_instantiation.h  event_adapter.cxx  event_adapter.h  file_format_base.cxx  file_format_base.h  file_format_manager.cxx  file_format_manager.h  file_format_schema.cxx  file_format_schema.h  file_format_type.cxx  file_format_type.h  kwiver_io_base.h  kwiver_io_base.txx  kwiver_io_base_data_io.cxx  kwiver_io_base_data_io.h  kwiver_io_base_instantiation.h  kwiver_io_helpers.cxx  kwiver_io_helpers.h  logging_map.cxx  logging_map.h  schema_algorithm.cxx  schema_algorithm.h  schema_factory.cxx  schema_factory.h  split.cxx  split.h  state_flags.cxx  state_flags.h  track_base.h  track_base_impl.cxx  track_base_impl.h  (+32 more)
track_oracle/aoi_utils/: CMakeLists.txt  aoi_utils.cxx  aoi_utils.h
track_oracle/aries_interface/: CMakeLists.txt  aries_interface.cxx  aries_interface.h
track_oracle/data_terms/: CMakeLists.txt  data_term_instances.cxx  data_term_tmp_utils.h  data_terms.cxx  data_terms.h  data_terms_common.h
track_oracle/descriptors/: descriptor_cutic_type.cxx  descriptor_cutic_type.h  descriptor_event_label_type.cxx  descriptor_event_label_type.h  descriptor_metadata_type.cxx  descriptor_metadata_type.h  descriptor_motion_type.cxx  descriptor_motion_type.h  descriptor_overlap_type.cxx  descriptor_overlap_type.h  descriptor_raw_1d_type.cxx  descriptor_raw_1d_type.h  xml_output_descriptor_classes.h
track_oracle/example/: CMakeLists.txt  runtime_field_query_example.cxx  track_format_example.cxx  track_oracle_example.cxx  track_reader_example.cxx  track_writer_example.cxx  xml_tokenizer_example.cxx
track_oracle/templates/: file_format_base_instances.cxx  track_oracle_instances_old_style.cxx
track_oracle/track_apix/: CMakeLists.txt  file_format_apix.cxx  file_format_apix.h  track_apix.h  track_apix_writer.cxx  track_apix_writer.h
track_oracle/track_comms_xml/: CMakeLists.txt  file_format_comms_xml.cxx  file_format_comms_xml.h  track_comms_xml.h
track_oracle/track_csv/: CMakeLists.txt  file_format_csv.cxx  file_format_csv.h  track_csv.h
track_oracle/track_e2at_callout/: CMakeLists.txt  file_format_e2at_callout.cxx  file_format_e2at_callout.h  track_e2at_callout.h
track_oracle/track_filter_kwe/: CMakeLists.txt  track_filter_kwe.cxx  track_filter_kwe.h
track_oracle/track_kst/: CMakeLists.txt  file_format_kst.cxx  file_format_kst.h  track_kst.h
track_oracle/track_kw18/: CMakeLists.txt  file_format_kw18.cxx  file_format_kw18.h  track_kw18.h
track_oracle/track_kwiver/: CMakeLists.txt  file_format_kwiver.cxx  file_format_kwiver.h  track_kwiver.h
track_oracle/track_kwxml/: CMakeLists.txt  file_format_kwxml.cxx  file_format_kwxml.h  track_kwxml.h
track_oracle/track_mitre_xml/: CMakeLists.txt  file_format_mitre_xml.cxx  file_format_mitre_xml.h  track_mitre_xml.h
track_oracle/track_scorable_mgrs/: CMakeLists.txt  scorable_mgrs.cxx  scorable_mgrs.h  scorable_mgrs_data_term.cxx  scorable_mgrs_data_term.h  scorable_mgrs_data_term_instance.cxx  track_scorable_mgrs.cxx  track_scorable_mgrs.h
track_oracle/track_vatic/: CMakeLists.txt  file_format_vatic.cxx  file_format_vatic.h  track_vatic.h
track_oracle/utils/: logging_map.h  (+4 more)
utilities/: CMakeLists.txt  blank_line_filter.h  object_cache.h  object_cache.txx  shell_comments_filter.h  timestamp.cxx  timestamp.h  uuid_able.cxx  uuid_able.h
vidtk3p/: CMakeLists.txt
(+59 files in other folders)
